--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.14",
     "framer-motion": "^10.18.0",
     "next": "14.1.0",
     "next-intl": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "resend": "^3.0.0"
   },
   "devDependencies": {
