--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@react-email/components": "^0.0.14",
     "framer-motion": "^10.18.0",
+    "merelyui": "^1.2.1",
     "next": "14.1.0",
-    "next-intl": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
